add color toggle
